<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="uiPrefsScreen">

    <PreferenceCategory android:title="@string/rule_prefs_title">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="activeRules"
            android:summary="@string/active_rules_summary"
            android:title="@string/active_rules" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="addDelay"
            android:summary="@string/add_delay_rules"
            android:title="@string/add_delay" />

        <dev.ukanth.ufirewall.preferences.SeekBarPreference
            android:defaultValue="2"
            android:key="networkDebounceDelay"
            android:max="10"
            android:summary="@string/network_debounce_summary"
            android:title="@string/network_debounce_title"
            app:min="0"
            app:suffix=" s" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="activeRules"
            android:icon="@drawable/ic_roam"
            android:key="enableRoam"
            android:summary="@string/roamingSummary"
            android:title="@string/roaming" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="activeRules"
            android:icon="@drawable/ic_lan"
            android:key="enableLAN"
            android:summary="@string/lan_summary"
            android:title="@string/lan_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="activeRules"
            android:icon="@drawable/ic_vpn"
            android:key="enableVPN"
            android:summary="@string/vpnSummary"
            android:title="@string/vpn_profile" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="activeRules"
            android:icon="@drawable/ic_tether"
            android:key="enableTether"
            android:summary="@string/tetherSummary"
            android:title="@string/tether_profile" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="activeRules"
            android:icon="@drawable/ic_tor"
            android:key="enableTor"
            android:summary="@string/torSummary"
            android:title="@string/tor_profile" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="activeRules"
            android:icon="@drawable/ic_custom_rules"
            android:key="enableCustomRules"
            android:summary="@string/direct_rules_visibility_summary"
            android:title="@string/direct_rules_visibility_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/dns_hijack_category">
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="activeRules"
            android:key="enableDnsHijack"
            android:summary="@string/dns_hijack_summary"
            android:title="@string/dns_hijack_title" />

        <EditTextPreference
            android:defaultValue="5354"
            android:dependency="enableDnsHijack"
            android:key="dnsHijackPort"
            android:summary="@string/dns_hijack_port_summary"
            android:title="@string/dns_hijack_port_title" />

        <EditTextPreference
            android:defaultValue="1.1.1.1:53&#10;8.8.8.8:53"
            android:dependency="enableDnsHijack"
            android:key="dnsHijackUpstreams"
            android:summary="@string/dns_hijack_upstreams_summary"
            android:title="@string/dns_hijack_upstreams_title" />

        <Preference
            android:dependency="enableDnsHijack"
            android:key="dnsHijackBenchmarkUpstreams"
            android:summary="@string/dns_hijack_benchmark_upstreams_summary"
            android:title="@string/dns_hijack_benchmark_upstreams_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="enableDnsHijack"
            android:key="dnsHijackFailOpen"
            android:summary="@string/dns_hijack_fail_open_summary"
            android:title="@string/dns_hijack_fail_open_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enableDnsHijack"
            android:key="dnsHijackStrictMode"
            android:summary="@string/dns_hijack_strict_summary"
            android:title="@string/dns_hijack_strict_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enableDnsHijack"
            android:key="dnsHijackBootPersistence"
            android:summary="@string/dns_hijack_boot_persistence_summary"
            android:title="@string/dns_hijack_boot_persistence_title" />

        <EditTextPreference
            android:defaultValue="2500"
            android:dependency="enableDnsHijack"
            android:key="dnsHijackTimeoutMs"
            android:summary="@string/dns_hijack_timeout_summary"
            android:title="@string/dns_hijack_timeout_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enableDnsHijack"
            android:key="dnsHijackUseProfilePolicy"
            android:summary="@string/dns_hijack_profile_policy_summary"
            android:title="@string/dns_hijack_profile_policy_title" />

        <Preference
            android:dependency="dnsHijackUseProfilePolicy"
            android:key="dnsHijackSaveProfilePolicy"
            android:summary="@string/dns_hijack_save_profile_policy_summary"
            android:title="@string/dns_hijack_save_profile_policy_title" />

        <Preference
            android:dependency="dnsHijackUseProfilePolicy"
            android:key="dnsHijackClearProfilePolicy"
            android:summary="@string/dns_hijack_clear_profile_policy_summary"
            android:title="@string/dns_hijack_clear_profile_policy_title" />

        <EditTextPreference
            android:dependency="enableDnsHijack"
            android:key="dnsHijackAllowExact"
            android:summary="@string/dns_hijack_allow_exact_summary"
            android:title="@string/dns_hijack_allow_exact_title" />

        <EditTextPreference
            android:dependency="enableDnsHijack"
            android:key="dnsHijackAllowSuffix"
            android:summary="@string/dns_hijack_allow_suffix_summary"
            android:title="@string/dns_hijack_allow_suffix_title" />

        <EditTextPreference
            android:dependency="enableDnsHijack"
            android:key="dnsHijackBlockExact"
            android:summary="@string/dns_hijack_block_exact_summary"
            android:title="@string/dns_hijack_block_exact_title" />

        <EditTextPreference
            android:dependency="enableDnsHijack"
            android:key="dnsHijackBlockSuffix"
            android:summary="@string/dns_hijack_block_suffix_summary"
            android:title="@string/dns_hijack_block_suffix_title" />

        <EditTextPreference
            android:dependency="enableDnsHijack"
            android:key="dnsHijackAllowRegex"
            android:summary="@string/dns_hijack_allow_regex_summary"
            android:title="@string/dns_hijack_allow_regex_title" />

        <EditTextPreference
            android:dependency="enableDnsHijack"
            android:key="dnsHijackBlockRegex"
            android:summary="@string/dns_hijack_block_regex_summary"
            android:title="@string/dns_hijack_block_regex_title" />

        <EditTextPreference
            android:dependency="enableDnsHijack"
            android:key="dnsHijackBlocklistUrls"
            android:summary="@string/dns_hijack_blocklist_urls_summary"
            android:title="@string/dns_hijack_blocklist_urls_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enableDnsHijack"
            android:key="dnsHijackScheduledBlocklistUpdates"
            android:summary="@string/dns_hijack_scheduled_blocklist_updates_summary"
            android:title="@string/dns_hijack_scheduled_blocklist_updates_title" />

        <EditTextPreference
            android:defaultValue="24"
            android:dependency="dnsHijackScheduledBlocklistUpdates"
            android:key="dnsHijackBlocklistUpdateIntervalHours"
            android:summary="@string/dns_hijack_blocklist_update_interval_summary"
            android:title="@string/dns_hijack_blocklist_update_interval_title" />

        <Preference
            android:dependency="enableDnsHijack"
            android:key="dnsHijackImportBlocklist"
            android:summary="@string/dns_hijack_import_blocklist_summary"
            android:title="@string/dns_hijack_import_blocklist_title" />

        <Preference
            android:dependency="enableDnsHijack"
            android:key="dnsHijackUpdateBlocklists"
            android:summary="@string/dns_hijack_update_blocklists_summary"
            android:title="@string/dns_hijack_update_blocklists_title" />

        <Preference
            android:dependency="enableDnsHijack"
            android:key="dnsHijackRollbackBlocklist"
            android:summary="@string/dns_hijack_rollback_blocklist_summary"
            android:title="@string/dns_hijack_rollback_blocklist_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/ui_chains_title">
        <SwitchPreference
            android:defaultValue="true"
            android:key="input_chain"
            android:summaryOff="@string/input_chain_summary_off"
            android:summaryOn="@string/input_chain_summary_on"
            android:title="@string/input_chain" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="output_chain"
            android:summaryOff="@string/output_chain_summary_off"
            android:summaryOn="@string/output_chain_summary_on"
            android:title="@string/output_chain" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="forward_chain"
            android:summaryOff="@string/forward_chain_summary_off"
            android:summaryOn="@string/forward_chain_summary_on"
            android:title="@string/forward_chain" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/ui_chains6_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enableIPv6"
            android:summary="@string/ipv6_summary"
            android:title="@string/ipv6_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="controlIPv6"
            android:summary="@string/control_ipv6_title"/>

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="controlIPv6"
            android:key="input_chain_v6"
            android:summaryOff="@string/input_chain_summary_off"
            android:summaryOn="@string/input_chain_summary_on"
            android:title="@string/input_chain_v6" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="controlIPv6"
            android:key="output_chain_v6"
            android:summaryOff="@string/output_chain_summary_off"
            android:summaryOn="@string/output_chain_summary_on"
            android:title="@string/output_chain_v6" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="controlIPv6"
            android:key="forward_chain_v6"
            android:summaryOff="@string/forward_chain_summary_off"
            android:summaryOn="@string/forward_chain_summary_on"
            android:title="@string/forward_chain_v6" />

    </PreferenceCategory>
</PreferenceScreen>
